# ChangeLog for media-gfx/kst
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/kst/Attic/ChangeLog,v 1.2 2004/12/24 19:47:57 swegener Exp $

*kst-0.97 (23 Dec 2004)

  23 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +kst-0.94.ebuild, +kst-0.97.ebuild, +kst-0.99.ebuild, +kst-1.0.0.ebuild:
  Moved from app-sci/kst to media-gfx/kst.

*kst-1.0.0 (03 Dec 2004)

  03 Dec 2004; Patrick Kursawe <phosphan@gentoo.org> +kst-1.0.0.ebuild:
  Version bump

  13 Oct 2004; Caleb Tennis <caleb@gentoo.org> :
  Version bump, plus a new runtime dep

  04 Jul 2004; Carsten Lohrke <carlo@gentoo.org> kst-0.94.ebuild,
  kst-0.97.ebuild:
  QA: need-kde after R/DEPEND

  06 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> kst-0.97.ebuild:
  Marked stable on amd64.

*kst-0.97 (29 Apr 2004)

  29 Apr 2004; Dominik Stadler <centic@gentoo.org> :
  Fix URL, closes Bug 49341. Add Version 0.97, closes Bug 49355.

  22 Mar 2004; Jason Wever <weeve@gentoo.org> kst-0.94.ebuild:
  Added ~sparc keyword.

  10 Mar 2004; David Holm <dholm@gentoo.org> kst-0.94.ebuild:
  Added to ~ppc.

*kst-0.94 (09 Mar 2004)

  09 Mar 2004; Caleb Tennis <caleb@gentoo.org> kst-0.94.ebuild, metadata.xml:
  Initial import
