@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/labplot/Attic/labplot-1.3.0.ebuild,v 1.1 2004/12/24 01:37:05 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/labplot/Attic/labplot-1.3.0.ebuild,v 1.2 2004/12/28 20:29:12 ribosome Exp $
 
 inherit eutils gnuconfig kde
 
@@ -17,7 +17,7 @@ IUSE="fftw imagemagick tiff"
 
 MAKEOPTS="${MAKEOPTS} -j1"
 
-DEPEND=">=dev-libs/gsl-1.3
+DEPEND=">=sci-libs/gsl-1.3
 	fftw? ( >=dev-libs/fftw-2.1.5 )
 	imagemagick? ( >=media-gfx/imagemagick-5.5.6-r1 )
 	x86? ( >=media-gfx/pstoedit-3.33 )
