@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/labplot
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/labplot/Attic/ChangeLog,v 1.2 2004/12/24 19:48:26 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/labplot/Attic/ChangeLog,v 1.3 2004/12/28 20:29:12 ribosome Exp $
+
+  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> labplot-1.3.0.ebuild:
+  Dependency update: dev-libs/gsl -> sci-libs/gsl.
 
 *labplot-1.3.0 (23 Dec 2004)
 
