@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/spectromatic
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/spectromatic/Attic/ChangeLog,v 1.2 2004/12/24 19:50:05 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/spectromatic/Attic/ChangeLog,v 1.3 2004/12/28 20:29:42 ribosome Exp $
+
+  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org>
+  spectromatic-1.0.ebuild:
+  Dependency update: dev-libs/gsl -> sci-libs/gsl.
 
 *spectromatic-1.0 (23 Dec 2004)
 
